--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "@ngrx/effects": "^19.0.0",
     "@ngrx/store": "^19.0.0",
     "@ngrx/store-devtools": "^19.0.0",
+    "@types/three": "^0.176.0",
+    "cannon-es": "^0.20.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "rxjs": "~7.8.0",
+    "three": "^0.177.0",
     "tslib": "^2.8.0",
     "zone.js": "~0.15.0"
   },
@@ -36,8 +41,8 @@
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/language-service": "^19.0.0",
-    "@types/node": "^22.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.0.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
